# strix

./: README.md  SELF_IMPROVEMENT_DESIGN.md  main.py  pyproject.toml  system_prompt.txt
core/: Agent.py  SelfImprovingAgent.py  utils.py
tests/: test_kit.py
tools/: crypto.py  edit.py  git.py  kit.py  search.py  shell.py
